--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "typings": "dist/index.d.ts",
   "scripts": {
     "build": "gulp build",
+    "prepare": "npm run build && npm run build-schemas && npm run build-doc",
+    "build-doc": "gulp doc",
     "build-schemas": "gulp typescript-schema",
     "lint": "gulp lint",
     "test": "gulp test"
