:sparkles: Implement Renaming and Deletion

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@essential-projects/iam_contracts": "^3.1.0",
     "@essential-projects/errors_ts": "^1.2.0",
     "@process-engine/solutionexplorer.contracts": "1.0.0",
-    "@process-engine/solutionexplorer.repository.contracts": "2.0.0",
-    "@process-engine/solutionexplorer.service.contracts": "2.0.0"
+    "@process-engine/solutionexplorer.repository.contracts": "feature~rename_and_delete",
+    "@process-engine/solutionexplorer.service.contracts": "feature~rename_and_delete"
   },
   "devDependencies": {
     "@essential-projects/tslint-config": "1.0.0",
