--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@essential-projects/iam_contracts": "^3.1.0",
     "@essential-projects/errors_ts": "^1.2.0",
     "@process-engine/solutionexplorer.contracts": "1.0.0",
-    "@process-engine/solutionexplorer.repository.contracts": "3.0.0",
-    "@process-engine/solutionexplorer.service.contracts": "3.0.0"
+    "@process-engine/solutionexplorer.repository.contracts": "feature~remove_single-diagram-functions",
+    "@process-engine/solutionexplorer.service.contracts": "feature~remove_single-diagram-functions"
   },
   "devDependencies": {
     "@essential-projects/tslint-config": "1.0.0",
