--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@process-engine/solutionexplorer.service",
-  "version": "3.0.1",
+  "version": "4.00",
   "description": "Service for the SolutionExplorer",
   "main": "dist/amd/index.js",
   "typings": "dist/index.d.ts",
@@ -16,8 +16,8 @@
     "@essential-projects/iam_contracts": "^3.1.0",
     "@essential-projects/errors_ts": "^1.2.0",
     "@process-engine/solutionexplorer.contracts": "1.0.0",
-    "@process-engine/solutionexplorer.repository.contracts": "feature~remove_single-diagram-functions",
-    "@process-engine/solutionexplorer.service.contracts": "feature~remove_single-diagram-functions"
+    "@process-engine/solutionexplorer.repository.contracts": "4.0.0",
+    "@process-engine/solutionexplorer.service.contracts": "4.0.0"
   },
   "devDependencies": {
     "@essential-projects/tslint-config": "1.0.0",
