--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "dependencies": {
     "@essential-projects/iam_contracts": "^3.1.0",
     "@essential-projects/errors_ts": "^1.2.0",
-    "@process-engine/solutionexplorer.contracts": "1.0.0",
-    "@process-engine/solutionexplorer.repository.contracts": "4.0.0-32a1f55d-b12",
-    "@process-engine/solutionexplorer.service.contracts": "4.0.0-d45659a9-b12"
+    "@process-engine/solutionexplorer.contracts": "^1.0.0",
+    "@process-engine/solutionexplorer.repository.contracts": "^4.1.0",
+    "@process-engine/solutionexplorer.service.contracts": "^4.1.0"
   },
   "devDependencies": {
     "@essential-projects/tslint-config": "^1.0.0",
