--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@essential-projects/iam_contracts": "^3.1.0",
     "@essential-projects/errors_ts": "^1.2.0",
     "@process-engine/solutionexplorer.contracts": "^1.0.0",
-    "@process-engine/solutionexplorer.repository.contracts": "4.1.0-b7c5ebaf-b1",
-    "@process-engine/solutionexplorer.service.contracts": "4.1.0-6d08dbff-b1"
+    "@process-engine/solutionexplorer.repository.contracts": "feature~make_files_watchable",
+    "@process-engine/solutionexplorer.service.contracts": "feature~make_files_watchable"
   },
   "devDependencies": {
     "@essential-projects/tslint-config": "^1.0.0",
