--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@essential-projects/tslint-config": "^1.0.0",
+    "@process-engine/ci_tools": "^2.0.0",
     "gulp": "^4.0.0",
     "gulptraum": "^3.0.0",
     "gulptraum-typescript": "^3.0.0",
