--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@essential-projects/iam_contracts": "^3.1.0",
     "@essential-projects/errors_ts": "^1.2.0",
     "@process-engine/solutionexplorer.contracts": "1.2.0",
-    "@process-engine/solutionexplorer.repository.contracts": "feature~add_solution_changed_callback",
-    "@process-engine/solutionexplorer.service.contracts": "feature~add_solution_changed_callback"
+    "@process-engine/solutionexplorer.repository.contracts": "4.4.0-alpha.1",
+    "@process-engine/solutionexplorer.service.contracts": "4.4.0-alpha.1"
   },
   "devDependencies": {
     "@essential-projects/eslint-config": "^1.0.0",
